--- a/index.html
+++ b/index.html
@@ -6,34 +6,48 @@
     <title>Password Generator</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-900 flex items-center justify-center h-screen">
-    <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center text-white w-80">
-        <h1 class="text-xl font-bold mb-4">Password Generator</h1>
-        <input id="password" type="text" placeholder="click on Generate button" readonly class="w-full mb-4 p-2 rounded bg-gray-700 text-center text-gray-200">
-        <div class="flex justify-between gap-2">
-            <button onclick="generatePassword()" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700">Generate</button>
-            <button onclick="copyPassword()" class="bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-600">Copy To Clipboard</button>
-        </div>
-        <div class="mt-4 text-left">
-            <div class="flex items-center justify-between">
-                <label>Password Length</label>
-            <input id="length" type="number" placeholder="Min 8 Char" min="6" max="20" class="w-50px mb-4 p-2 rounded bg-gray-700 text-gray-200">
+<body class="bg-gray-900 h-screen">
+    <header>
+        <nav class="pt-8">
+            <h4 class="text-white text-2xl text-center">Welcome to password Generator</h4>
+        </nav>
+    </header>
+    <main class="flex flex-col items-center justify-center mt-16">
+        <div class="bg-gray-800 p-6 rounded-lg shadow-lg text-center text-white w-80">
+            <h1 class="text-xl font-bold mb-4">Password Generator</h1>
+            <input id="password" type="text" placeholder="click on Generate button" readonly class="w-full mb-4 p-2 rounded bg-gray-700 text-center text-gray-200">
+            <div class="flex justify-between gap-2">
+                <button onclick="generatePassword()" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700">Generate</button>
+                <button onclick="copyPassword()" class="bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-600">Copy To Clipboard</button>
             </div>
-            <label class="flex items-center">
-                <input type="checkbox" id="uppercase" checked class="mr-2"> Include uppercase letters
-            </label>
-            <label class="flex items-center">
-                <input type="checkbox" id="lowercase" checked class="mr-2"> Include lowercase letters
-            </label>
-            <label class="flex items-center">
-                <input type="checkbox" id="numbers" checked class="mr-2"> Include numbers
-            </label>
-            <label class="flex items-center">
-                <input type="checkbox" id="symbols" checked class="mr-2"> Include symbols
-            </label>
+            <div class="mt-4 text-left">
+                <div class="flex items-center justify-between">
+                    <label>Password Length</label>
+                <input id="length" type="number" placeholder="Min 8 Char" min="6" max="20" class="w-50px mb-4 p-2 rounded bg-gray-700 text-gray-200">
+                </div>
+                <label class="flex items-center">
+                    <input type="checkbox" id="uppercase" checked class="mr-2"> Include uppercase letters
+                </label>
+                <label class="flex items-center">
+                    <input type="checkbox" id="lowercase" checked class="mr-2"> Include lowercase letters
+                </label>
+                <label class="flex items-center">
+                    <input type="checkbox" id="numbers" checked class="mr-2"> Include numbers
+                </label>
+                <label class="flex items-center">
+                    <input type="checkbox" id="symbols" checked class="mr-2"> Include symbols
+                </label>
+            </div>
+            
         </div>
-    </div>
-
+        <button class="bg-blue-500 text-white px-4 py-2 rounded-3xl hover:bg-blue-700 mt-4" onclick="resetForm()">Refresh</button>
+    </main>
+    <footer class="absolute bottom-0 w-full">
+        <nav class="flex flex-col justify-center items-center m-2">
+            <article class="text-gray-200">All © Rights reserved</article>
+            <article class="text-gray-200">Designed and developed by me</article>
+        </nav>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
